--- a/my-app/src/Component/Carousel.module.css
+++ b/my-app/src/Component/Carousel.module.css
@@ -3,6 +3,11 @@
         width: 0 0 calc(100% / 3) !important;
 
     }
+    .hoverP {
+      left:35px !important;
+      width: 182.3px !important;
+      font-size: 11px !important;
+    }
     .slide{
         width: 100%  !important;
         position: relative;
@@ -19,7 +24,18 @@
       }
 }
 @media screen and (max-width:361px) and (min-width:100px) {
-    .slider {
+    .hoverP{
+      left:00px !important;
+      width: 111px !important;
+      font-size: 10px !important;
+    }  
+    .leftWn{
+      width: 43% !important;
+    }
+    .rightAr{
+      width: 57% !important;
+    }
+  .slider {
       }
       .slide {
         height: 185px !important;
@@ -48,11 +64,11 @@
   }
   
   .slide {
-    background-color: rgba(246, 224, 227, 0.8);
+    /* background-color: rgba(246, 224, 227, 0.8); */
     height: 280px;
     flex: 0 0 calc(100% / 3);
     width: 100%;
-    margin-top: 5px;
+    margin-top: 10px;
   }
   
   .slide img {
@@ -70,3 +86,34 @@
   
   /* 추가적인 스타일링을 원하신다면 이곳에 추가하세요 */
   
+
+  .hoverP {
+    position: absolute; /* .hoverP 요소를 절대적 위치로 설정 */
+    top: 0;
+    left: 0;
+    color: white;
+    left: 80px;
+
+    width: 201px;
+    border-radius: 5px 5px 0 0;
+    /* background-color: rgba(0, 0, 0 ,0.7); */
+    border: 1px solid #000;
+    background-color: pink;
+    border-bottom: 0px solid #000;
+    padding: 5px; /* 텍스트 주위에 여백 추가 */
+    margin: 0; /* 기본 margin 제거 */
+    z-index: 1; /* .hoverP 요소를 이미지 위로 올리기 위해 z-index 사용 */
+  }
+  .imgBox{
+    position: relative;
+  }
+
+  .leftWn{
+    float: left;
+    width: 35%;
+  }
+  .rightAr{
+    float: right;
+    width: 60%;
+    text-align: right;
+  }
