--- a/my-app/src/Component/Tag/styles/TagCss.module.css
+++ b/my-app/src/Component/Tag/styles/TagCss.module.css
@@ -1,21 +1,22 @@
 .tag{
     float: left;
+    max-width: 1920px;
     width: 100%;
 }
 .tag .tagItem li{
     width: 20%;
     float: left;
-    height: 0.3vw;
-    line-height: 0.5vw;
+    height: 20px;
+    line-height: 20px;
     margin-right:1.5%;
     margin-left: 1.5%;
-    margin-bottom: 0.5vw;
+    margin-bottom: 10px;
     list-style: none;
     text-align: center;
-    font-size: 12px;
+    font-size: 16px;
     background-color: rgb(230, 226, 226);
     padding: 10px;
-    border-radius: 10px;
+    border-radius: 14px;
 }
 
 
@@ -35,7 +36,10 @@
         width: 100%;
     }
     .tagItem li{
+        height: 15px !important;
+        line-height: 15px !important;
         width: 18.5% !important;
+        font-size: 13px !important;
         margin-bottom: 15px !important;
     }
     .tag h3{
@@ -54,7 +58,10 @@
     }
    
     .tag .tagItem li{
+        height: 7px !important;
         margin-right: 2px !important;
+        line-height: 7px !important;
+        border-radius: 8px !important;
         margin-bottom: 7px !important;
         width: 14% !important;
         font-size: 10px !important;
@@ -79,3 +86,4 @@
     float: left;
     margin-bottom: 5px;
 }
+
