--- a/my-app/src/Component/Tag/styles/TagCss.module.css
+++ b/my-app/src/Component/Tag/styles/TagCss.module.css
@@ -12,9 +12,11 @@
     margin-left: 1.5%;
     margin-bottom: 10px;
     list-style: none;
+    color:black;
+    border: 2px solid rgb(171,230,157);
     text-align: center;
     font-size: 16px;
-    background-color: rgb(230, 226, 226);
+    /* background-color: rgb(171,230,157); */
     padding: 10px;
     border-radius: 14px;
 }
