--- a/my-app/src/Component/Carousel.module.css
+++ b/my-app/src/Component/Carousel.module.css
@@ -98,7 +98,7 @@
     border-radius: 5px 5px 0 0;
     /* background-color: rgba(0, 0, 0 ,0.7); */
     border: 1px solid #000;
-    background-color: pink;
+    background-color: rgb(171,230,157);
     border-bottom: 0px solid #000;
     padding: 5px; /* 텍스트 주위에 여백 추가 */
     margin: 0; /* 기본 margin 제거 */
