--- a/my-app/src/Component/Carousel.module.css
+++ b/my-app/src/Component/Carousel.module.css
@@ -72,20 +72,20 @@
   }
   
   .slide img {
-    border: 1px solid #000;
+    border: 1px solid black;
     width:190px;
     margin-top: 5px;
     padding: 10px;
     background-color: white;
     border-radius: 10px;
-    box-shadow:1px 1px;
+    box-shadow:1px 1px ;
     margin-left: 80px;
     object-fit: contain;
     
   }
   .slide img:hover{
     background-color: rgb(171,230,157);
-    box-shadow:0px 0px;
+    box-shadow:0px 0px ;
     padding-right: 11px;
   }
   
@@ -102,9 +102,10 @@
     width: 201px;
     border-radius: 5px 5px 0 0;
     /* background-color: rgba(0, 0, 0 ,0.7); */
-    border: 1px solid #000;
+    border: 1px solid black;
+
     background-color: rgb(171,230,157);
-    border-bottom: 0px solid #000;
+    border-bottom: 0px solid rgb(171,230,157);
     padding: 5px; /* 텍스트 주위에 여백 추가 */
     margin: 0; /* 기본 margin 제거 */
     z-index: 1; /* .hoverP 요소를 이미지 위로 올리기 위해 z-index 사용 */
