--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -150,6 +150,7 @@
     font-size: 15px;
     margin-top: 20px;
     height: 60px;
+    padding-bottom: 10px;
     border-bottom: 1px solid rgb(171,230,157);
     /* float: left; */
     width: 105%;
