--- a/my-app/src/src/Component/ClickLayoutCss.module.css
+++ b/my-app/src/src/Component/ClickLayoutCss.module.css
@@ -38,11 +38,11 @@
   .Litem{
     width: 100% !important;
     position: relative;
-    right: 35px;
+    right: 45px;
   }
   .Ritem{
     position: relative;
-    right: 75px;
+    left: 62px;
     width: 40vw !important;
   }
 }
