--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -114,6 +114,7 @@
     /* float: left; */
     /* width: 40%; */
     margin-top: 12px;
+    margin-bottom: 10px;
 }
 .RankImg img{ 
     box-shadow: 2px 2px 2px 2px;
@@ -121,6 +122,7 @@
 .RankImg{
     width: 100%;
     float: left;
+    
     background-color: rgb(171,230,157);
     height: 100%;
     object-fit: contain;
