--- a/my-app/src/Component/mainRank.module.css
+++ b/my-app/src/Component/mainRank.module.css
@@ -1,3 +1,12 @@
+@media screen and (max-width:1799px) and (min-width:723px){
+    .mrbox{
+        width: 100% !important;
+    }
+    .RBox{
+        width: 30% !important;
+        margin-left: 0px !important;
+    }
+}
 @media screen and (max-width:721px) and (min-width:362px){
     .mrbox{
         width: 100% !important;
@@ -202,7 +211,24 @@
       transform: scale(1); /* 다시 초기 크기로 돌아옴 */
     }
   }
+  @keyframes scaleAnimation2 {
+    0% {
+      transform: scale(1); /* 초기 크기 */
+    }
+    50% {
+      transform: scale(1.1); /* 중간 크기 (커진 상태) */
+        color:rgb(104, 125, 99);
+    }
+    100% {
+      transform: scale(1); /* 다시 초기 크기로 돌아옴 */
+    }
+  }
 
   .FirstImgBox{
     background-color: rgb(196, 246, 179);
+    
+  }
+  .FirstImgBox img{
+    animation: scaleAnimation 3s infinite; /* 3초 동안 애니메이션 반복 */
+
   }
