--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -7,6 +7,46 @@
     width: 360px;
     margin:  0 auto;
 } */
+@media screen and (max-width:1800px) and (min-width:1741px) {
+    .leftWn{
+        width: 35% !important;
+        font-size: 14px;
+    }
+    .hoverP{
+        bottom:8px !important;
+    }
+    .rightAr{
+        font-size: 14px;
+
+        width: 59.5% !important;
+    }
+
+}
+@media screen and (max-width:1740px) and (min-width:1201px) {
+    .leftWn{
+        width: auto !important;
+        font-size: 14px;
+    }
+    .AllToonInfo img{
+        background-color: red;
+        height: 65% !important;
+    } 
+    .imgBox{
+        height: auto !important;
+    }
+    .rightAr{
+        font-size: 14px;
+
+        width: auto !important;
+    }
+    .hoverP{
+        bottom:0px !important;
+    }
+    .likee{
+        display: none;
+    }
+}
+
 @media screen and (max-width:721px) and (min-width:362px) {
     /* 메인 */
     .rankContent{
