--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -660,8 +660,12 @@
     float: right;
     width:51%;
   }
+  .Rank:hover{
+    background-color: rgb(171,230,157);
+
+  }
   .Rank {
-    border: 2px solid rgb(171,230,157);;
+    border: 2px solid rgb(171,230,157);
     padding: 5px;
     background-color: white;
     border-radius: 10px;
