--- a/my-app/src/styles/MainPageCss.module.css
+++ b/my-app/src/styles/MainPageCss.module.css
@@ -761,8 +761,8 @@
 
 .DayToonItem{
     overflow: hidden;
-    height: 100%;
-    width: 45%;float: left;
+    height: auto;
+    width: auto;float: left;
     margin-right: 20px;
     
 }
@@ -818,7 +818,8 @@
 #DhoverP{
     bottom:0;
     left:2px;
-    width: 95.5%;
+    /* width: 95.5%; */
+    width: 100%;
 
 }
 .hoverP {
@@ -833,10 +834,10 @@
   }
   .leftWn{
     float: left;
-    width: 37%;
+    width: auto;
   }
   .rightAr{
-    width: 56%;
+    width: auto;
     margin-right: 10px;
     text-align: right;
     float: right;
